--- a/css/inner.css
+++ b/css/inner.css
@@ -1,3 +1,30 @@
+@-webkit-keyframes rotate {
+  /* line 24, ../scss/_base.scss */
+  0% {
+    -webkit-transform: rotate(-30deg);
+  }
+
+  /* line 27, ../scss/_base.scss */
+  25% {
+    -webkit-transform: rotate(30deg);
+  }
+
+  /* line 30, ../scss/_base.scss */
+  50% {
+    -webkit-transform: rotate(-15deg);
+  }
+
+  /* line 33, ../scss/_base.scss */
+  75% {
+    -webkit-transform: rotate(15deg);
+  }
+
+  /* line 36, ../scss/_base.scss */
+  100% {
+    -webkit-transform: rotate(0deg);
+  }
+}
+
 /*inner*/
 /* line 6, ../scss/inner.scss */
 .tabs_sidebar {
@@ -25,69 +52,80 @@
   line-height: 30px;
   font-weight: bold;
 }
+/* line 26, ../scss/inner.scss */
+.tabs__content_sb .btn:active {
+  line-height: 32px;
+}
 
-/* line 28, ../scss/inner.scss */
+/* line 31, ../scss/inner.scss */
 .banner {
   height: 250px;
   margin-bottom: 40px;
   background: #ebebeb;
 }
 
-/* line 33, ../scss/inner.scss */
+/* line 36, ../scss/inner.scss */
 .pagination {
   position: relative;
   margin-top: 35px;
   padding-bottom: 50px;
   border-top: 1px solid #d3d3d3;
 }
-/* line 38, ../scss/inner.scss */
+/* line 41, ../scss/inner.scss */
 .pagination p {
   padding: 15px 0;
   overflow: hidden;
 }
-/* line 41, ../scss/inner.scss */
+/* line 44, ../scss/inner.scss */
 .pagination p b {
   float: left;
   font-weight: normal;
 }
-/* line 45, ../scss/inner.scss */
+/* line 48, ../scss/inner.scss */
 .pagination p span {
   float: right;
   color: #acacac;
 }
-/* line 50, ../scss/inner.scss */
+/* line 53, ../scss/inner.scss */
 .pagination .pagination__nav {
   left: 0;
   top: 75px;
 }
 
-/* line 56, ../scss/inner.scss */
+/* line 59, ../scss/inner.scss */
 .pagination__list a {
   margin-right: 8px;
   font-weight: bold;
 }
-/* line 60, ../scss/inner.scss */
+/* line 63, ../scss/inner.scss */
 .pagination__list .active {
   color: #ffb21f;
 }
 
 /*article*/
-/* line 66, ../scss/inner.scss */
+/* line 69, ../scss/inner.scss */
 .article .h2 {
   line-height: 1.3;
 }
 
-/* line 71, ../scss/inner.scss */
+/* line 74, ../scss/inner.scss */
 .article__content h4 {
   margin-bottom: 15px;
   font-size: 16px;
 }
-/* line 75, ../scss/inner.scss */
+/* line 78, ../scss/inner.scss */
 .article__content p {
   margin-bottom: 15px;
   line-height: 1.5;
 }
-/* line 79, ../scss/inner.scss */
+/* line 82, ../scss/inner.scss */
+.article__content blockquote {
+  padding-left: 35px;
+  margin-bottom: 15px;
+  border-left: 3px solid #d3d3d3;
+  line-height: 1.5;
+}
+/* line 89, ../scss/inner.scss */
 .article__content table {
   width: 100%;
   margin-bottom: 20px;
@@ -96,80 +134,80 @@
   border-top: 1px solid #d3d3d3;
   text-align: left;
 }
-/* line 87, ../scss/inner.scss */
+/* line 97, ../scss/inner.scss */
 .article__content tr {
   border-bottom: 1px solid #d3d3d3;
 }
-/* line 89, ../scss/inner.scss */
+/* line 99, ../scss/inner.scss */
 .article__content tr:nth-child(even) {
   background: #f8f8f8;
 }
-/* line 93, ../scss/inner.scss */
+/* line 103, ../scss/inner.scss */
 .article__content td, .article__content th {
   padding: 15px;
 }
-/* line 95, ../scss/inner.scss */
+/* line 105, ../scss/inner.scss */
 .article__content td:first-child, .article__content th:first-child {
   width: 380px;
 }
-/* line 99, ../scss/inner.scss */
+/* line 109, ../scss/inner.scss */
 .article__content th {
   font-style: italic;
   color: #acacac;
   font-weight: normal;
 }
 
-/* line 105, ../scss/inner.scss */
+/* line 115, ../scss/inner.scss */
 .article__date {
   overflow: hidden;
 }
-/* line 107, ../scss/inner.scss */
+/* line 117, ../scss/inner.scss */
 .article__date span {
   float: left;
   color: #acacac;
 }
-/* line 111, ../scss/inner.scss */
+/* line 121, ../scss/inner.scss */
 .article__date a {
   float: right;
   border-bottom: 1px solid #BBE4F1;
   font-size: 14px;
 }
 
-/* line 117, ../scss/inner.scss */
+/* line 127, ../scss/inner.scss */
 .article__pic {
   margin: 20px 0;
   overflow: hidden;
 }
-/* line 120, ../scss/inner.scss */
+/* line 130, ../scss/inner.scss */
 .article__pic img {
   float: left;
 }
 
 /*add comment*/
-/* line 125, ../scss/inner.scss */
+/* line 135, ../scss/inner.scss */
 .add-comm {
   margin-top: 20px;
   padding: 0 20px;
   background: #fff2b6;
 }
-/* line 129, ../scss/inner.scss */
+/* line 139, ../scss/inner.scss */
 .add-comm h3 {
   padding: 15px 0;
 }
 
-/* line 134, ../scss/inner.scss */
+/* line 144, ../scss/inner.scss */
 .add-comm__txt textarea {
   width: 100%;
   height: 200px;
   border: 1px solid #d0d0d0;
 }
 
-/* line 140, ../scss/inner.scss */
+/* line 150, ../scss/inner.scss */
 .add-comm__btn {
   padding: 20px 0;
   overflow: hidden;
 }
-/* line 143, ../scss/inner.scss */
+/* line 153, ../scss/inner.scss */
 .add-comm__btn .btn {
   float: left;
   width: 95px;
@@ -179,43 +217,54 @@
   line-height: 28px;
   cursor: pointer;
 }
-/* line 152, ../scss/inner.scss */
+/* line 161, ../scss/inner.scss */
+.add-comm__btn .btn:active {
+  line-height: 30px;
+}
+/* line 165, ../scss/inner.scss */
 .add-comm__btn p {
   float: left;
   margin: 0;
   line-height: 30px;
 }
-/* line 157, ../scss/inner.scss */
+/* line 170, ../scss/inner.scss */
 .add-comm__btn a {
+  margin-left: 25px;
   border-bottom: 1px solid #BBE4F1;
+}
+/* line 173, ../scss/inner.scss */
+.add-comm__btn a i {
+  background: url('../img/icons-s812cfb257b.png') 0 -1030px no-repeat;
+  width: 14px;
+  height: 16px;
 }
 
 /*comments*/
-/* line 163, ../scss/inner.scss */
+/* line 180, ../scss/inner.scss */
 .comms h3 {
   margin: 35px 0;
 }
-/* line 167, ../scss/inner.scss */
+/* line 184, ../scss/inner.scss */
 .comms .block span {
   display: block;
   margin-bottom: 40px;
 }
-/* line 172, ../scss/inner.scss */
+/* line 189, ../scss/inner.scss */
 .comms p {
   margin-bottom: 10px;
 }
 
-/* line 176, ../scss/inner.scss */
+/* line 193, ../scss/inner.scss */
 .all-reviews {
   margin-top: 30px;
   padding-bottom: 5px;
   overflow: hidden;
 }
-/* line 180, ../scss/inner.scss */
+/* line 197, ../scss/inner.scss */
 .all-reviews a {
   float: left;
 }
-/* line 183, ../scss/inner.scss */
+/* line 200, ../scss/inner.scss */
 .all-reviews .all-reviews__link {
   margin: 6px 0 0 30px;
   border-bottom: 1px solid #BBE4F1;
