--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -7,7 +7,34 @@ $experimental-support-for-svg: true;
 	background: sprite($map, $sprite) no-repeat;
 	@include image-size(sprite-file($map, $sprite));
 }
-
-
-
+@mixin transition($what: all, $length: 1s, $easing: ease-in-out) {
+  -moz-transition:    $what $length $easing;
+  -webkit-transition: $what $length $easing;
+  -o-transition:      $what $length $easing;
+  -ms-transition:     $what $length $easing;
+  transition:         $what $length $easing;
+}
+@mixin animation($what: all, $length: 1s, $easing: ease-in-out, $fillmode: both) {
+  -moz-animatiom:    $what $length $easing 0s 1 normal $fillmode;
+  -webkit-animation: $what $length $easing 0s 1 normal $fillmode;
+  -o-animation:      $what $length $easing 0s 1 normal $fillmode;
+  animation:         $what $length $easing 0s 1 normal $fillmode;
+}
+@-webkit-keyframes rotate {
+  0% {
+    -webkit-transform: rotate(-30deg);
+  }
+  25% {
+  	-webkit-transform: rotate(30deg);
+  }
+  50% {
+  	-webkit-transform: rotate(-15deg);
+  }
+  75% {
+  	-webkit-transform: rotate(15deg);
+  }
+  100% { 
+    -webkit-transform: rotate(0deg);
+  }
+}
 
