--- a/scss/common.scss
+++ b/scss/common.scss
@@ -48,9 +48,13 @@ input, textarea, button {
 	width: 1200px;
 	margin: 0 auto;
 }
-/*header*/
-.header-out {
+/*top*/
+.top {
+	position: fixed;
+	width: 100%;
+	height: 180px;
 	background: #fff;
+	z-index: 1000;
 }
 .header-banner {
 	height: 60px;
@@ -58,18 +62,33 @@ input, textarea, button {
 }
 .header {
 	position: relative;
+	top: 0;
+	width: 1200px;
+	height: 60px;
 	padding-top: 20px;
+	background: #fff;
 	overflow: hidden;
+	z-index: 100;
 }
 .logo {
 	float: left;
 	margin: -1px 15px 0 0;
 	@include sized-sprite($icons, logo);
 	a {
+		position: relative;
 		display: block;
 		width: 145px;
 		height: 42px;
 		text-indent: -20000px;
+		&:hover i {
+			@include animation(rotate, 0.4s, cubic-bezier(0.785, 0.135, 0.15, 0.86), both);
+		}
+	}
+	i {
+		position: absolute;
+		top: 9px;
+		left: 95px;
+		@include sized-sprite($icons, logo-u);
 	}
 }
 .logo-txt {
@@ -93,7 +112,7 @@ input, textarea, button {
 	}
 	li {
 		float: left;
-		padding-left: 26px;
+		padding-left: 25px;
 		height: 60px;
 		line-height: 60px;
 		a {
@@ -106,42 +125,40 @@ input, textarea, button {
 	}
 	.nav__add {
 		position: relative;
-		width: 202px;
-		padding-left: 44px;
+		width: 140px;
+		padding-left: 45px;
 		.btn {
-			display: inline-block;
-			width: 86px;
-			margin-left: 20px;
-			text-align: center;
+			position: absolute;
+			top: 15px;
+			right: 20px;
+			width: 30px;
 			padding: 0;
 			border: 1px solid #006c90;
-			@include box-shadow(#006c90 0px 2px 5px);
-			color: #885400;
-			font-size: 13px;
-			text-shadow: 0 1px 1px #ffd856;
-			font-weight: bold;
-			text-transform: none;
+			@include box-shadow(#ffecab 0px 1px 1px inset, #006c90 0px 2px 5px);
+			i {
+				left: 7px;
+			}
 		}
 		a {
 			color: #ffd75e;
 			border-bottom: 1px solid #88b88f;
 		}
-		i {
+		em {
 			position: absolute;
 			top: 0;
 			@include sized-sprite($icons, divider);
 		}		
 	}	
 	.nav__divider-l {
-		left: 19px;
+		left: 21px;
 	}
 	.nav__divider-r {
 		right: 0;
 	}
-	.nav__user {
+	.nav__user-log {
 		position: relative;
 		float: right;
-		width: 115px;
+		width: 170px;
 		padding-left: 0px;
 		a {
 			font-size: 14px;
@@ -160,29 +177,40 @@ input, textarea, button {
 			@include sized-sprite($icons, user-s);
 		}
 	}		
-	.nav__user_no-enter {
-		width: 105px;
-		height: 50px;
-		padding-top: 10px;
-		line-height: 1;
-		a {
-			font-weight: normal;
-			line-height: 20px;
+	.nav__user-no-log {
+		float: right;
+		width: 193px;
+		padding: 0px;
+		.btn {
+			width: 160px;
+			padding-left: 15px;
+			margin-top: 15px;
+			border: 1px solid #006c90;
+			background: #24aedc;
+			@include background-image(linear-gradient(#24aedc, #0188b6));
+			@include box-shadow(#92d7ee 0px 1px 1px inset, #006c90 0px 2px 5px);
 			font-size: 14px;
+			font-weight: bold;
+			text-transform: none;
+			text-shadow: none;
+			&:hover, &:active {
+				background: #34b9e5;
+				@include background-image(linear-gradient(#34b9e5, #0294c5));
+			}
+			&:active {
+				line-height: 32px;
+			}
 		}
 		i {
-			top: 12px;
-		}
-		.nav__social {
 			position: absolute;
-			top: 13px;			
+			top: 7px;			
 		}
 		.nav__social_fb {
-			left: 50px;
+			left: 127px;
 			@include sized-sprite($icons, fb-e);
 		}
 		.nav__social_vk {
-			left: 70px;
+			left: 147px;
 			@include sized-sprite($icons, vk-e);
 		}
 	}
@@ -196,29 +224,35 @@ input, textarea, button {
 		position: relative;
 		height: 40px;
 		line-height: 40px;
+	}
+	.tape__container {
+		position: relative;
+		width: 1150px;
+		height: 40px;
+		margin-left: 50px;
 		overflow: hidden;
-	}
-	ul {
-		position: absolute;
-		top: 0;
-		left: 50px;
-		width: 20000px;
-		z-index: 10;		
-	}
-	li {
-		float: left;		
-		margin-right: 27px;
-	}
-	span {
-		color: #8c8c8c;
-	}
-	a {
-		border-bottom: 1px solid #5b5b5b;
-		color: #fff;
-	}
-	b {
-		margin: 0 5px;
-	}
+		ul {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 20000px;
+			z-index: 10;		
+		}
+		li {
+			float: left;		
+			margin-right: 27px;
+		}
+		span {
+			color: #8c8c8c;
+		}
+		a {
+			border-bottom: 1px solid #5b5b5b;
+			color: #fff;
+		}
+		b {
+			margin: 0 5px;
+		}
+	}	
 }
 .tape__comm {
 	position: relative;
@@ -233,7 +267,7 @@ input, textarea, button {
 .tape__fife {
 	position: absolute;
 	top: 7px;
-	left: 0;
+	left: 2px;
 	@include sized-sprite($icons, fife);
 	z-index: 30;
 }
@@ -255,7 +289,7 @@ input, textarea, button {
 .footer {
 	position: relative;
 	margin-top: -35px;
-	height: 225px;
+	height: 250px;
 	padding-top: 70px;
 	background: #e0e0e0;
 	z-index: 10;
@@ -326,6 +360,7 @@ input, textarea, button {
 }
 .facebook {
 	float: right;
+	background: #fff;
 }
 .vkontakte {
 	float: right;
@@ -495,13 +530,34 @@ input, textarea, button {
 		left: 9px;
 		@include sized-sprite($icons, add);		
 	}
+	&:hover, &:active {
+		background: #ffe386;
+		@include background-image(linear-gradient(#ffe386, #ffac29));
+	}
+	&:active {
+		line-height: 32px;
+		i {
+			top: 8px;
+		}
+	}
 }
 .likes {
-	width: 280px;
-	margin-top: 20px;
-	padding: 10px;
+	float: left;
+	padding: 10px 0 10px 15px;
 	border: 1px solid #d3d3d3;
-}
+	.fb-like {
+		float: left;
+		margin-right: 15px;
+	}
+	iframe {
+		float: left;
+		margin-right: 5px;
+	}
+	#vk_like {
+		float: left;
+		clear: none !important;
+	}
+}	
 /*popup*/
 .popup-bg {
 	display: none;
@@ -518,20 +574,21 @@ input, textarea, button {
 	padding: 30px;
 	background: #fff;
 	z-index: 200;
-	form {
-			
+	form {			
 		.btn {
 			float: left;
 			margin-right: 20px;
 			width: 65px;
 			padding: 0;
 			cursor: pointer;
+			line-height: 1;
 		}		
 	}	
 }
 .txt-field {
 	width: 220px;
 	height: 26px;
+	line-height: 26px;
 	padding-left: 8px;
 	margin-bottom: 18px;
 	border-top: 1px solid #a6a6a6;
@@ -567,18 +624,29 @@ input, textarea, button {
 }
 .popup__links {
 	width: 150px;
-	margin: 25px 0;
+	margin-top: 15px;
 	a {
 		border-bottom: 1px solid #BBE4F1;
 		line-height: 1.5;
 	}
 }
 .popup__social {
-	margin-top: 15px;
-	overflow: hidden;
+	margin-bottom: 20px;
 	a {
-		float: left;
-		margin-right: 7px;
+		position: relative;
+		display: block;
+		height: 24px;		
+		padding-left: 35px;
+		margin-bottom: 10px;
+	}
+	span {
+		line-height: 24px;
+		border-bottom: 1px solid #BBE4F1;
+	}
+	i {
+		position: absolute;
+		top: 0;
+		left: 0;
 	}
 	.popup__social-fb {
 		@include sized-sprite($icons, fb);	
@@ -588,14 +656,14 @@ input, textarea, button {
 	}	
 } 
 .popup__title {
-	margin-bottom: 30px;
+	margin-bottom: 20px;
 	overflow: hidden;
 	b {
 		float: left;
 	}
 	a {
 		float: right;
-		border-bottom: 1px solid #BBE4F1;		
+		@include sized-sprite($icons, close);
 	}
 }
 .popup_complaint {
@@ -670,7 +738,20 @@ input, textarea, button {
 		margin-bottom: 15px;
 	}
 	.txt-field {
-		width: 660px;
-		height: 75px;
+		width: 650px;
+		height: 65px;
+		padding: 5px 10px;
+		font-family: Arial, sans-serif;
+	}
+}
+/*user*/
+.user {
+	position: relative;
+	margin-left: 20px;
+	i {
+		position: absolute;
+		top: 1px;
+		left: -20px;
+		@include sized-sprite($icons, user-b);
 	}
 }
