--- a/scss/layouts.scss
+++ b/scss/layouts.scss
@@ -2,7 +2,7 @@
 /*products*/
 .cols {
 	position: relative;
-	padding-bottom: 90px;
+	padding: 180px 0 90px 0;
 	overflow: hidden;
 	background: #fff;
 	z-index: 20;
