--- a/css/inner.css
+++ b/css/inner.css
@@ -1,27 +1,156 @@
 @-webkit-keyframes rotate {
   /* line 24, ../scss/_base.scss */
   0% {
-    -webkit-transform: rotate(-30deg);
+    -webkit-transform: rotate(-10deg);
   }
 
   /* line 27, ../scss/_base.scss */
-  25% {
-    -webkit-transform: rotate(30deg);
+  10% {
+    -webkit-transform: rotate(0deg);
   }
 
   /* line 30, ../scss/_base.scss */
-  50% {
-    -webkit-transform: rotate(-15deg);
+  20% {
+    -webkit-transform: rotate(10deg);
   }
 
   /* line 33, ../scss/_base.scss */
-  75% {
-    -webkit-transform: rotate(15deg);
+  30% {
+    -webkit-transform: rotate(0deg);
   }
 
   /* line 36, ../scss/_base.scss */
+  40% {
+    -webkit-transform: rotate(-10deg);
+  }
+
+  /* line 39, ../scss/_base.scss */
+  50% {
+    -webkit-transform: rotate(0deg);
+  }
+
+  /* line 42, ../scss/_base.scss */
+  60% {
+    -webkit-transform: rotate(10deg);
+  }
+
+  /* line 45, ../scss/_base.scss */
+  70% {
+    -webkit-transform: rotate(0deg);
+  }
+
+  /* line 48, ../scss/_base.scss */
+  80% {
+    -webkit-transform: rotate(-10deg);
+  }
+
+  /* line 51, ../scss/_base.scss */
   100% {
     -webkit-transform: rotate(0deg);
+  }
+}
+
+@-moz-keyframes rotate {
+  /* line 56, ../scss/_base.scss */
+  0% {
+    -moz-transform: rotate(-10deg);
+  }
+
+  /* line 59, ../scss/_base.scss */
+  10% {
+    -moz-transform: rotate(0deg);
+  }
+
+  /* line 62, ../scss/_base.scss */
+  20% {
+    -moz-transform: rotate(10deg);
+  }
+
+  /* line 65, ../scss/_base.scss */
+  30% {
+    -moz-transform: rotate(0deg);
+  }
+
+  /* line 68, ../scss/_base.scss */
+  40% {
+    -moz-transform: rotate(-10deg);
+  }
+
+  /* line 71, ../scss/_base.scss */
+  50% {
+    -moz-transform: rotate(0deg);
+  }
+
+  /* line 74, ../scss/_base.scss */
+  60% {
+    -moz-transform: rotate(10deg);
+  }
+
+  /* line 77, ../scss/_base.scss */
+  70% {
+    -moz-transform: rotate(0deg);
+  }
+
+  /* line 80, ../scss/_base.scss */
+  80% {
+    -moz-transform: rotate(-10deg);
+  }
+
+  /* line 83, ../scss/_base.scss */
+  100% {
+    -moz-transform: rotate(0deg);
+  }
+}
+
+@-o-keyframes rotate {
+  /* line 88, ../scss/_base.scss */
+  0% {
+    -o-transform: rotate(-10deg);
+  }
+
+  /* line 91, ../scss/_base.scss */
+  10% {
+    -o-transform: rotate(0deg);
+  }
+
+  /* line 94, ../scss/_base.scss */
+  20% {
+    -o-transform: rotate(10deg);
+  }
+
+  /* line 97, ../scss/_base.scss */
+  30% {
+    -o-transform: rotate(0deg);
+  }
+
+  /* line 100, ../scss/_base.scss */
+  40% {
+    -o-transform: rotate(-10deg);
+  }
+
+  /* line 103, ../scss/_base.scss */
+  50% {
+    -o-transform: rotate(0deg);
+  }
+
+  /* line 106, ../scss/_base.scss */
+  60% {
+    -o-transform: rotate(10deg);
+  }
+
+  /* line 109, ../scss/_base.scss */
+  70% {
+    -o-transform: rotate(0deg);
+  }
+
+  /* line 112, ../scss/_base.scss */
+  80% {
+    -o-transform: rotate(-10deg);
+  }
+
+  /* line 115, ../scss/_base.scss */
+  100% {
+    -o-transform: rotate(0deg);
   }
 }
 
@@ -109,23 +238,29 @@
 }
 
 /* line 74, ../scss/inner.scss */
+.article__content img {
+  float: left;
+  margin: 0 30px 15px 0;
+  border: 1px solid #939393;
+}
+/* line 79, ../scss/inner.scss */
 .article__content h4 {
   margin-bottom: 15px;
   font-size: 16px;
 }
-/* line 78, ../scss/inner.scss */
+/* line 83, ../scss/inner.scss */
 .article__content p {
   margin-bottom: 15px;
   line-height: 1.5;
 }
-/* line 82, ../scss/inner.scss */
+/* line 87, ../scss/inner.scss */
 .article__content blockquote {
   padding-left: 35px;
   margin-bottom: 15px;
   border-left: 3px solid #d3d3d3;
   line-height: 1.5;
 }
-/* line 89, ../scss/inner.scss */
+/* line 94, ../scss/inner.scss */
 .article__content table {
   width: 100%;
   margin-bottom: 20px;
@@ -134,84 +269,84 @@
   border-top: 1px solid #d3d3d3;
   text-align: left;
 }
-/* line 97, ../scss/inner.scss */
+/* line 102, ../scss/inner.scss */
 .article__content tr {
   border-bottom: 1px solid #d3d3d3;
 }
-/* line 99, ../scss/inner.scss */
+/* line 104, ../scss/inner.scss */
 .article__content tr:nth-child(even) {
   background: #f8f8f8;
 }
-/* line 103, ../scss/inner.scss */
+/* line 108, ../scss/inner.scss */
 .article__content td, .article__content th {
   padding: 15px;
 }
-/* line 105, ../scss/inner.scss */
+/* line 110, ../scss/inner.scss */
 .article__content td:first-child, .article__content th:first-child {
   width: 380px;
 }
-/* line 109, ../scss/inner.scss */
+/* line 114, ../scss/inner.scss */
 .article__content th {
   font-style: italic;
   color: #acacac;
   font-weight: normal;
 }
 
-/* line 115, ../scss/inner.scss */
+/* line 120, ../scss/inner.scss */
 .article__date {
+  margin-bottom: 20px;
   overflow: hidden;
 }
-/* line 117, ../scss/inner.scss */
+/* line 123, ../scss/inner.scss */
 .article__date span {
   float: left;
   color: #acacac;
 }
-/* line 121, ../scss/inner.scss */
+/* line 127, ../scss/inner.scss */
 .article__date a {
   float: right;
   border-bottom: 1px solid #BBE4F1;
   font-size: 14px;
+  -moz-transition: border-color 0.5s linear;
+  -webkit-transition: border-color 0.5s linear;
+  -o-transition: border-color 0.5s linear;
+  -ms-transition: border-color 0.5s linear;
+  transition: border-color 0.5s linear;
 }
-
-/* line 127, ../scss/inner.scss */
-.article__pic {
-  margin: 20px 0;
-  overflow: hidden;
-}
-/* line 130, ../scss/inner.scss */
-.article__pic img {
-  float: left;
+/* line 132, ../scss/inner.scss */
+.article__date a:hover {
+  border-bottom: 1px solid #09c;
 }
 
 /*add comment*/
-/* line 135, ../scss/inner.scss */
+/* line 138, ../scss/inner.scss */
 .add-comm {
   margin-top: 20px;
   padding: 0 20px;
   background: #fff2b6;
 }
-/* line 139, ../scss/inner.scss */
+/* line 142, ../scss/inner.scss */
 .add-comm h3 {
   padding: 15px 0;
 }
 
-/* line 143, ../scss/inner.scss */
+/* line 146, ../scss/inner.scss */
 .add-comm__txt {
   border: 1px solid #d0d0d0;
   overflow: hidden;
 }
-/* line 146, ../scss/inner.scss */
+/* line 149, ../scss/inner.scss */
 .add-comm__txt textarea {
   width: 100%;
   height: 200px;
 }
 
-/* line 151, ../scss/inner.scss */
+/* line 154, ../scss/inner.scss */
 .add-comm__btn {
   padding: 20px 0;
   overflow: hidden;
 }
-/* line 154, ../scss/inner.scss */
+/* line 157, ../scss/inner.scss */
 .add-comm__btn .btn {
   float: left;
   width: 95px;
@@ -221,22 +356,22 @@
   line-height: 28px;
   cursor: pointer;
 }
-/* line 162, ../scss/inner.scss */
+/* line 165, ../scss/inner.scss */
 .add-comm__btn .btn:active {
   line-height: 30px;
 }
-/* line 166, ../scss/inner.scss */
+/* line 169, ../scss/inner.scss */
 .add-comm__btn p {
   float: left;
   margin: 0;
   line-height: 30px;
 }
-/* line 171, ../scss/inner.scss */
+/* line 174, ../scss/inner.scss */
 .add-comm__btn a {
   margin-left: 25px;
   border-bottom: 1px solid #BBE4F1;
 }
-/* line 174, ../scss/inner.scss */
+/* line 177, ../scss/inner.scss */
 .add-comm__btn a i {
   background: url('../img/icons-sedb12026c5.png') 0 -1076px no-repeat;
   width: 14px;
@@ -244,53 +379,53 @@
 }
 
 /*comments*/
-/* line 181, ../scss/inner.scss */
+/* line 184, ../scss/inner.scss */
 .comms h3 {
   margin: 35px 0;
 }
-/* line 185, ../scss/inner.scss */
+/* line 188, ../scss/inner.scss */
 .comms .block span {
   display: block;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
-/* line 190, ../scss/inner.scss */
+/* line 193, ../scss/inner.scss */
 .comms p {
   margin-bottom: 10px;
 }
 
-/* line 194, ../scss/inner.scss */
+/* line 197, ../scss/inner.scss */
 .all-reviews {
   margin-top: 30px;
   padding-bottom: 5px;
   overflow: hidden;
 }
-/* line 198, ../scss/inner.scss */
+/* line 201, ../scss/inner.scss */
 .all-reviews a {
   float: left;
 }
-/* line 201, ../scss/inner.scss */
+/* line 204, ../scss/inner.scss */
 .all-reviews .all-reviews__link {
   margin: 6px 0 0 30px;
   border-bottom: 1px solid #BBE4F1;
 }
 
 /*text area*/
-/* line 207, ../scss/inner.scss */
+/* line 210, ../scss/inner.scss */
 .jHtmlArea {
   background: #fff;
 }
-/* line 209, ../scss/inner.scss */
+/* line 212, ../scss/inner.scss */
 .jHtmlArea iframe {
   border: none;
 }
-/* line 213, ../scss/inner.scss */
+/* line 216, ../scss/inner.scss */
 .jHtmlArea .ToolBar ul {
   padding: 5px;
   background: #f8f8f8;
   border-bottom: 1px solid #e5e5e5;
   overflow: hidden;
 }
-/* line 219, ../scss/inner.scss */
+/* line 222, ../scss/inner.scss */
 .jHtmlArea .ToolBar li {
   float: left;
   margin-right: 5px;
@@ -309,53 +444,53 @@
   background-image: linear-gradient(#ffffff, #ebeaea);
   border: 1px solid #bebebe;
 }
-/* line 226, ../scss/inner.scss */
+/* line 229, ../scss/inner.scss */
 .jHtmlArea .ToolBar li:hover {
   border: solid 1px #8d8d8d;
 }
-/* line 230, ../scss/inner.scss */
+/* line 233, ../scss/inner.scss */
 .jHtmlArea .ToolBar a {
   display: block;
   width: 23px;
   height: 23px;
 }
-/* line 235, ../scss/inner.scss */
+/* line 238, ../scss/inner.scss */
 .jHtmlArea .ToolBar .bold {
   background: url('../img/icons-sedb12026c5.png') 0 -1214px no-repeat;
   width: 23px;
   height: 23px;
 }
-/* line 238, ../scss/inner.scss */
+/* line 241, ../scss/inner.scss */
 .jHtmlArea .ToolBar .italic {
   background: url('../img/icons-sedb12026c5.png') 0 -1260px no-repeat;
   width: 23px;
   height: 23px;
 }
-/* line 241, ../scss/inner.scss */
+/* line 244, ../scss/inner.scss */
 .jHtmlArea .ToolBar .underline {
   background: url('../img/icons-sedb12026c5.png') 0 -1108px no-repeat;
   width: 23px;
   height: 23px;
 }
-/* line 244, ../scss/inner.scss */
+/* line 247, ../scss/inner.scss */
 .jHtmlArea .ToolBar .strikethrough {
   background: url('../img/icons-sedb12026c5.png') 0 -1037px no-repeat;
   width: 23px;
   height: 23px;
 }
-/* line 247, ../scss/inner.scss */
+/* line 250, ../scss/inner.scss */
 .jHtmlArea .ToolBar .link {
   background: url('../img/icons-sedb12026c5.png') 0 -966px no-repeat;
   width: 23px;
   height: 23px;
 }
-/* line 250, ../scss/inner.scss */
+/* line 253, ../scss/inner.scss */
 .jHtmlArea .ToolBar .html {
   background: url('../img/icons-sedb12026c5.png') 0 -1131px no-repeat;
   width: 55px;
   height: 23px;
 }
-/* line 253, ../scss/inner.scss */
+/* line 256, ../scss/inner.scss */
 .jHtmlArea .ToolBar .quote {
   background: url('../img/icons-sedb12026c5.png') 0 -1237px no-repeat;
   width: 23px;
