--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -22,19 +22,97 @@ $experimental-support-for-svg: true;
 }
 @-webkit-keyframes rotate {
   0% {
-    -webkit-transform: rotate(-30deg);
+    -webkit-transform: rotate(-10deg);
   }
-  25% {
-  	-webkit-transform: rotate(30deg);
+  10% {
+  	-webkit-transform: rotate(0deg);
   }
-  50% {
-  	-webkit-transform: rotate(-15deg);
+  20% {
+  	-webkit-transform: rotate(10deg);
   }
-  75% {
-  	-webkit-transform: rotate(15deg);
+  30% {
+  	-webkit-transform: rotate(0deg);
   }
-  100% { 
+  40% { 
+    -webkit-transform: rotate(-10deg);
+  }
+  50% { 
+    -webkit-transform: rotate(0deg);
+  }
+  60% {
+    -webkit-transform: rotate(10deg);
+  }
+  70% {
+    -webkit-transform: rotate(0deg);
+  }
+  80% {
+    -webkit-transform: rotate(-10deg);
+  }
+  100% {
     -webkit-transform: rotate(0deg);
   }
 }
-
+@-moz-keyframes rotate {
+  0% {
+    -moz-transform: rotate(-10deg);
+  }
+  10% {
+    -moz-transform: rotate(0deg);
+  }
+  20% {
+    -moz-transform: rotate(10deg);
+  }
+  30% {
+    -moz-transform: rotate(0deg);
+  }
+  40% { 
+    -moz-transform: rotate(-10deg);
+  }
+  50% { 
+    -moz-transform: rotate(0deg);
+  }
+  60% {
+    -moz-transform: rotate(10deg);
+  }
+  70% {
+    -moz-transform: rotate(0deg);
+  }
+  80% {
+    -moz-transform: rotate(-10deg);
+  }
+  100% {
+    -moz-transform: rotate(0deg);
+  }
+}
+@-o-keyframes rotate {
+  0% {
+    -o-transform: rotate(-10deg);
+  }
+  10% {
+    -o-transform: rotate(0deg);
+  }
+  20% {
+    -o-transform: rotate(10deg);
+  }
+  30% {
+    -o-transform: rotate(0deg);
+  }
+  40% { 
+    -o-transform: rotate(-10deg);
+  }
+  50% { 
+    -o-transform: rotate(0deg);
+  }
+  60% {
+    -o-transform: rotate(10deg);
+  }
+  70% {
+    -o-transform: rotate(0deg);
+  }
+  80% {
+    -o-transform: rotate(-10deg);
+  }
+  100% {
+    -o-transform: rotate(0deg);
+  }
+}
