--- a/css/common.css
+++ b/css/common.css
@@ -838,8 +838,21 @@ input, textarea, button {
 .block__desc span {
   color: #acacac;
 }
+/* line 444, ../scss/common.scss */
+.block__desc span a {
+  border-bottom: 1px solid #bbe4f1;
+  -moz-transition: border-color 0.5s linear;
+  -webkit-transition: border-color 0.5s linear;
+  -o-transition: border-color 0.5s linear;
+  -ms-transition: border-color 0.5s linear;
+  transition: border-color 0.5s linear;
+}
+/* line 447, ../scss/common.scss */
+.block__desc span a:hover {
+  border-bottom: 1px solid #09c;
+}
 
-/* line 446, ../scss/common.scss */
+/* line 453, ../scss/common.scss */
 .comm {
   position: relative;
   margin-left: 25px;
@@ -851,7 +864,7 @@ input, textarea, button {
   -ms-transition: border-color 0.5s linear;
   transition: border-color 0.5s linear;
 }
-/* line 452, ../scss/common.scss */
+/* line 459, ../scss/common.scss */
 .comm i {
   position: absolute;
   top: 2px;
@@ -860,16 +873,16 @@ input, textarea, button {
   width: 19px;
   height: 15px;
 }
-/* line 458, ../scss/common.scss */
+/* line 465, ../scss/common.scss */
 .comm:hover {
   border-bottom: 1px solid #09c;
 }
 
-/* line 462, ../scss/common.scss */
+/* line 469, ../scss/common.scss */
 .comm_answer {
   margin-left: 40px;
 }
-/* line 464, ../scss/common.scss */
+/* line 471, ../scss/common.scss */
 .comm_answer i {
   background: url('../img/icons-sedb12026c5.png') 0 -989px no-repeat;
   width: 16px;
@@ -877,11 +890,11 @@ input, textarea, button {
 }
 
 /*block-img*/
-/* line 469, ../scss/common.scss */
+/* line 476, ../scss/common.scss */
 .block-img {
   position: relative;
 }
-/* line 471, ../scss/common.scss */
+/* line 478, ../scss/common.scss */
 .block-img a {
   position: absolute;
   left: 0;
@@ -898,12 +911,12 @@ input, textarea, button {
 }
 
 /*tabs*/
-/* line 487, ../scss/common.scss */
+/* line 494, ../scss/common.scss */
 .tabs {
   position: relative;
 }
 
-/* line 490, ../scss/common.scss */
+/* line 497, ../scss/common.scss */
 .tabs__shadow {
   position: absolute;
   height: 220px;
@@ -921,22 +934,22 @@ input, textarea, button {
   z-index: 5;
 }
 
-/* line 500, ../scss/common.scss */
+/* line 507, ../scss/common.scss */
 .tabs__link {
   position: relative;
   overflow: hidden;
   z-index: 10;
 }
-/* line 504, ../scss/common.scss */
+/* line 511, ../scss/common.scss */
 .tabs__link li {
   float: left;
   border-right: 1px solid #fff;
 }
-/* line 507, ../scss/common.scss */
+/* line 514, ../scss/common.scss */
 .tabs__link li:last-child {
   border: none;
 }
-/* line 511, ../scss/common.scss */
+/* line 518, ../scss/common.scss */
 .tabs__link a {
   position: relative;
   display: block;
@@ -952,81 +965,81 @@ input, textarea, button {
   background-image: -o-linear-gradient(#f9f9f9 60%, #e0e0e0);
   background-image: linear-gradient(#f9f9f9 60%, #e0e0e0);
 }
-/* line 520, ../scss/common.scss */
+/* line 527, ../scss/common.scss */
 .tabs__link .active {
   background: #fff;
 }
-/* line 523, ../scss/common.scss */
+/* line 530, ../scss/common.scss */
 .tabs__link i {
   position: absolute;
   top: 17px;
   left: 17px;
 }
 
-/* line 529, ../scss/common.scss */
+/* line 536, ../scss/common.scss */
 .tabs__link-1 {
   background: url('../img/icons-sedb12026c5.png') 0 -300px no-repeat;
   width: 60px;
   height: 60px;
 }
 
-/* line 530, ../scss/common.scss */
+/* line 537, ../scss/common.scss */
 .tabs__link-2 {
   background: url('../img/icons-sedb12026c5.png') 0 -240px no-repeat;
   width: 60px;
   height: 60px;
 }
 
-/* line 531, ../scss/common.scss */
+/* line 538, ../scss/common.scss */
 .tabs__link-3 {
   background: url('../img/icons-sedb12026c5.png') 0 -120px no-repeat;
   width: 60px;
   height: 60px;
 }
 
-/* line 532, ../scss/common.scss */
+/* line 539, ../scss/common.scss */
 .tabs__link-4 {
   background: url('../img/icons-sedb12026c5.png') 0 -180px no-repeat;
   width: 60px;
   height: 60px;
 }
 
-/* line 533, ../scss/common.scss */
+/* line 540, ../scss/common.scss */
 .tabs__link-5 {
   background: url('../img/icons-sedb12026c5.png') 0 0 no-repeat;
   width: 60px;
   height: 60px;
 }
 
-/* line 534, ../scss/common.scss */
+/* line 541, ../scss/common.scss */
 .tabs__link-6 {
   background: url('../img/icons-sedb12026c5.png') 0 -420px no-repeat;
   width: 60px;
   height: 60px;
 }
 
-/* line 535, ../scss/common.scss */
+/* line 542, ../scss/common.scss */
 .tabs__link-7 {
   background: url('../img/icons-sedb12026c5.png') 0 -360px no-repeat;
   width: 60px;
   height: 60px;
 }
 
-/* line 536, ../scss/common.scss */
+/* line 543, ../scss/common.scss */
 .tabs__link-8 {
   background: url('../img/icons-sedb12026c5.png') 0 -60px no-repeat;
   width: 60px;
   height: 60px;
 }
 
-/* line 537, ../scss/common.scss */
+/* line 544, ../scss/common.scss */
 .tabs__content {
   position: relative;
   padding: 30px 35px;
   background: #fff;
   z-index: 10;
 }
-/* line 542, ../scss/common.scss */
+/* line 549, ../scss/common.scss */
 .tabs__content a {
   line-height: 1.3;
   font-weight: bold;
@@ -1037,11 +1050,11 @@ input, textarea, button {
   -ms-transition: border-color 0.5s linear;
   transition: border-color 0.5s linear;
 }
-/* line 547, ../scss/common.scss */
+/* line 554, ../scss/common.scss */
 .tabs__content a:hover {
   border-bottom: 1px solid #09c;
 }
-/* line 551, ../scss/common.scss */
+/* line 558, ../scss/common.scss */
 .tabs__content .btn {
   -moz-transition: background-color 0.5s linear;
   -webkit-transition: background-color 0.5s linear;
@@ -1049,18 +1062,18 @@ input, textarea, button {
   -ms-transition: background-color 0.5s linear;
   transition: background-color 0.5s linear;
 }
-/* line 553, ../scss/common.scss */
+/* line 560, ../scss/common.scss */
 .tabs__content .btn:hover {
   border: 1px solid #ae6c00;
 }
-/* line 557, ../scss/common.scss */
+/* line 564, ../scss/common.scss */
 .tabs__content p {
   margin-top: 10px;
   line-height: 1.5;
 }
 
 /*general*/
-/* line 563, ../scss/common.scss */
+/* line 570, ../scss/common.scss */
 .btn {
   position: relative;
   display: block;
@@ -1095,7 +1108,7 @@ input, textarea, button {
   -ms-transition: background-color 0.5s ease-out;
   transition: background-color 0.5s ease-out;
 }
-/* line 580, ../scss/common.scss */
+/* line 587, ../scss/common.scss */
 .btn i {
   position: absolute;
   top: 7px;
@@ -1104,14 +1117,14 @@ input, textarea, button {
   width: 16px;
   height: 16px;
 }
-/* line 586, ../scss/common.scss */
+/* line 593, ../scss/common.scss */
 .btn:hover {
   background-color: #ffecab;
   -webkit-box-shadow: #d0d0d0 0px 1px 5px;
   -moz-box-shadow: #d0d0d0 0px 1px 5px;
   box-shadow: #d0d0d0 0px 1px 5px;
 }
-/* line 590, ../scss/common.scss */
+/* line 597, ../scss/common.scss */
 .btn:active {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -1126,35 +1139,35 @@ input, textarea, button {
   background-image: linear-gradient(#ff9e03, #ffd856);
   line-height: 32px;
 }
-/* line 595, ../scss/common.scss */
+/* line 602, ../scss/common.scss */
 .btn:active i {
   top: 8px;
 }
 
-/* line 600, ../scss/common.scss */
+/* line 607, ../scss/common.scss */
 .likes {
   float: left;
   padding: 10px 0 10px 15px;
   border: 1px solid #d3d3d3;
 }
-/* line 604, ../scss/common.scss */
+/* line 611, ../scss/common.scss */
 .likes .fb-like {
   float: left;
   margin-right: 15px;
 }
-/* line 608, ../scss/common.scss */
+/* line 615, ../scss/common.scss */
 .likes iframe {
   float: left;
   margin-right: 5px;
 }
-/* line 612, ../scss/common.scss */
+/* line 619, ../scss/common.scss */
 .likes #vk_like {
   float: left;
   clear: none !important;
 }
 
 /*popup*/
-/* line 618, ../scss/common.scss */
+/* line 625, ../scss/common.scss */
 .popup-bg {
   display: none;
   position: fixed;
@@ -1166,14 +1179,14 @@ input, textarea, button {
   z-index: 400;
 }
 
-/* line 628, ../scss/common.scss */
+/* line 635, ../scss/common.scss */
 .popup {
   position: fixed;
   padding: 30px;
   background: #fff;
   z-index: 500;
 }
-/* line 634, ../scss/common.scss */
+/* line 641, ../scss/common.scss */
 .popup form .btn {
   float: left;
   margin-right: 20px;
@@ -1183,7 +1196,7 @@ input, textarea, button {
   line-height: 1;
 }
 
-/* line 644, ../scss/common.scss */
+/* line 651, ../scss/common.scss */
 .txt-field {
   width: 220px;
   height: 26px;
@@ -1201,18 +1214,18 @@ input, textarea, button {
   font-size: 13px;
 }
 
-/* line 656, ../scss/common.scss */
+/* line 663, ../scss/common.scss */
 .txt-field_1 {
   width: 40px;
   margin-right: 5px;
 }
 
-/* line 660, ../scss/common.scss */
+/* line 667, ../scss/common.scss */
 .txt-field_2 {
   width: 90px;
 }
 
-/* line 663, ../scss/common.scss */
+/* line 670, ../scss/common.scss */
 .popup_enter {
   display: none;
   top: 180px;
@@ -1221,27 +1234,27 @@ input, textarea, button {
   margin-left: 260px;
 }
 
-/* line 670, ../scss/common.scss */
+/* line 677, ../scss/common.scss */
 .popup__btn {
   overflow: hidden;
 }
-/* line 672, ../scss/common.scss */
+/* line 679, ../scss/common.scss */
 .popup__btn .popup__check {
   float: left;
   margin: 7px 7px 0 0;
 }
-/* line 676, ../scss/common.scss */
+/* line 683, ../scss/common.scss */
 .popup__btn span {
   float: left;
   margin-top: 7px;
 }
 
-/* line 681, ../scss/common.scss */
+/* line 688, ../scss/common.scss */
 .popup__links {
   width: 150px;
   margin-top: 15px;
 }
-/* line 684, ../scss/common.scss */
+/* line 691, ../scss/common.scss */
 .popup__links a {
   border-bottom: 1px solid #BBE4F1;
   line-height: 1.5;
@@ -1251,16 +1264,16 @@ input, textarea, button {
   -ms-transition: border-color 0.5s linear;
   transition: border-color 0.5s linear;
 }
-/* line 688, ../scss/common.scss */
+/* line 695, ../scss/common.scss */
 .popup__links a:hover {
   border-bottom: 1px solid #09c;
 }
 
-/* line 693, ../scss/common.scss */
+/* line 700, ../scss/common.scss */
 .popup__social {
   margin-bottom: 20px;
 }
-/* line 695, ../scss/common.scss */
+/* line 702, ../scss/common.scss */
 .popup__social a {
   position: relative;
   display: block;
@@ -1268,11 +1281,11 @@ input, textarea, button {
   padding-left: 35px;
   margin-bottom: 10px;
 }
-/* line 702, ../scss/common.scss */
+/* line 709, ../scss/common.scss */
 .popup__social a:hover span {
   border-bottom: 1px solid #09c;
 }
-/* line 707, ../scss/common.scss */
+/* line 714, ../scss/common.scss */
 .popup__social span {
   line-height: 24px;
   border-bottom: 1px solid #BBE4F1;
@@ -1282,35 +1295,35 @@ input, textarea, button {
   -ms-transition: border-color 0.5s linear;
   transition: border-color 0.5s linear;
 }
-/* line 712, ../scss/common.scss */
+/* line 719, ../scss/common.scss */
 .popup__social i {
   position: absolute;
   top: 0;
   left: 0;
 }
-/* line 717, ../scss/common.scss */
+/* line 724, ../scss/common.scss */
 .popup__social .popup__social-fb {
   background: url('../img/icons-sedb12026c5.png') 0 -785px no-repeat;
   width: 24px;
   height: 24px;
 }
-/* line 720, ../scss/common.scss */
+/* line 727, ../scss/common.scss */
 .popup__social .popup__social-vk {
   background: url('../img/icons-sedb12026c5.png') 0 -737px no-repeat;
   width: 24px;
   height: 24px;
 }
 
-/* line 724, ../scss/common.scss */
+/* line 731, ../scss/common.scss */
 .popup__title {
   margin-bottom: 20px;
   overflow: hidden;
 }
-/* line 727, ../scss/common.scss */
+/* line 734, ../scss/common.scss */
 .popup__title b {
   float: left;
 }
-/* line 730, ../scss/common.scss */
+/* line 737, ../scss/common.scss */
 .popup__title a {
   float: right;
   background: url('../img/icons-sedb12026c5.png') 0 -895px no-repeat;
@@ -1318,7 +1331,7 @@ input, textarea, button {
   height: 17px;
 }
 
-/* line 735, ../scss/common.scss */
+/* line 742, ../scss/common.scss */
 .popup_complaint {
   display: none;
   left: 50%;
@@ -1327,105 +1340,105 @@ input, textarea, button {
   height: 340px;
   margin-left: -600px;
 }
-/* line 743, ../scss/common.scss */
+/* line 750, ../scss/common.scss */
 .popup_complaint form .btn {
   width: 95px;
 }
 
-/* line 748, ../scss/common.scss */
+/* line 755, ../scss/common.scss */
 .popup__client {
   overflow: hidden;
 }
-/* line 750, ../scss/common.scss */
+/* line 757, ../scss/common.scss */
 .popup__client li {
   float: left;
   width: 140px;
 }
-/* line 753, ../scss/common.scss */
+/* line 760, ../scss/common.scss */
 .popup__client li input {
   float: left;
   margin: 10px 10px 0 0;
 }
-/* line 757, ../scss/common.scss */
+/* line 764, ../scss/common.scss */
 .popup__client li i {
   float: left;
   margin-right: 10px;
 }
-/* line 761, ../scss/common.scss */
+/* line 768, ../scss/common.scss */
 .popup__client li span {
   line-height: 32px;
 }
 
-/* line 766, ../scss/common.scss */
+/* line 773, ../scss/common.scss */
 .popup__client_1 {
   background: url('../img/icons-sedb12026c5.png') 0 -544px no-repeat;
   width: 32px;
   height: 32px;
 }
 
-/* line 767, ../scss/common.scss */
+/* line 774, ../scss/common.scss */
 .popup__client_2 {
   background: url('../img/icons-sedb12026c5.png') 0 -480px no-repeat;
   width: 32px;
   height: 32px;
 }
 
-/* line 768, ../scss/common.scss */
+/* line 775, ../scss/common.scss */
 .popup__client_3 {
   background: url('../img/icons-sedb12026c5.png') 0 -512px no-repeat;
   width: 32px;
   height: 32px;
 }
 
-/* line 769, ../scss/common.scss */
+/* line 776, ../scss/common.scss */
 .popup__info {
   margin: 20px 0 10px 0;
   overflow: hidden;
 }
-/* line 772, ../scss/common.scss */
+/* line 779, ../scss/common.scss */
 .popup__info span {
   display: block;
   margin-bottom: 15px;
 }
 
-/* line 777, ../scss/common.scss */
+/* line 784, ../scss/common.scss */
 .popup__mobile {
   float: left;
   margin-right: 40px;
 }
-/* line 780, ../scss/common.scss */
+/* line 787, ../scss/common.scss */
 .popup__mobile span {
   display: block;
   margin-bottom: 15px;
 }
-/* line 784, ../scss/common.scss */
+/* line 791, ../scss/common.scss */
 .popup__mobile input {
   width: 250px;
 }
 
-/* line 788, ../scss/common.scss */
+/* line 795, ../scss/common.scss */
 .popup__phone {
   float: left;
   margin-right: 40px;
 }
-/* line 791, ../scss/common.scss */
+/* line 798, ../scss/common.scss */
 .popup__phone b {
   float: left;
   margin-right: 5px;
   line-height: 27px;
   font-weight: normal;
 }
-/* line 797, ../scss/common.scss */
+/* line 804, ../scss/common.scss */
 .popup__phone input {
   float: left;
 }
 
-/* line 802, ../scss/common.scss */
+/* line 809, ../scss/common.scss */
 .popup__comm span {
   display: block;
   margin-bottom: 15px;
 }
-/* line 806, ../scss/common.scss */
+/* line 813, ../scss/common.scss */
 .popup__comm .txt-field {
   width: 650px;
   height: 65px;
@@ -1434,12 +1447,12 @@ input, textarea, button {
 }
 
 /*user*/
-/* line 814, ../scss/common.scss */
+/* line 821, ../scss/common.scss */
 .user {
   position: relative;
   margin-left: 20px;
 }
-/* line 817, ../scss/common.scss */
+/* line 824, ../scss/common.scss */
 .user i {
   position: absolute;
   top: 1px;
